[metadata]
name = musered
description = Muse data reduction, quick and easy
long_description = file: README.md
author = Simon Conseil
author_email = simon.conseil@univ-lyon1.fr
keywords = astronomy, astrophysics, science, muse, vlt
# license = BSD 3-Clause License
# license_file = LICENSE
# classifiers =
#     Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    mpdaf
    python-cpl
    tqdm
    dataset
    PyYAML
    click
    astroquery>=0.3.9
    joblib

[options.extras_require]
all = click-repl

[options.entry_points]
console_scripts =
    musered = musered.__main__:main

[wheel]
universal = 1

[tool:pytest]
addopts = --doctest-modules
minversion = 3.0.0
testpaths = tests musered
filterwarnings =
    ignore::DeprecationWarning
