[metadata]
name = musered
description = Muse data reduction, quick and easy
long_description = file: README.md
author = Simon Conseil
author_email = simon.conseil@univ-lyon1.fr
keywords = astronomy, astrophysics, science, muse, vlt
# license = BSD 3-Clause License
# license_file = LICENSE
# classifiers =
#     Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    astroquery>=0.3.9
    click
    dataset
    joblib
    mpdaf
    python-cpl
    PyYAML
    tqdm

[options.extras_require]
all = click-repl; psycopg2-binary; zap

[options.entry_points]
console_scripts =
    musered = musered.__main__:main

[tool:pytest]
addopts = --doctest-modules
minversion = 3.0.0
testpaths = tests musered
filterwarnings =
    ignore::DeprecationWarning

[isort]
multi_line_output = 3
include_trailing_comma = True
known_third_party=numpy,scipy,astropy,mpdaf,sqlalchemy,joblib,matplotlib,dataset,yaml

[flake8]
max-line-length = 88
