[metadata]
name = musered
description = Muse data reduction, quick and easy
long_description = file: README.md
author = Simon Conseil
author_email = simon.conseil@univ-lyon1.fr
keywords = astronomy, astrophysics, science, muse, vlt
license = MIT License
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    astroquery>=0.3.9
    click
    dataset
    joblib
    mpdaf
    python-cpl
    PyYAML
    tqdm

[options.extras_require]
all = click-repl; psycopg2-binary; zap
docs = numpydoc; sphinx_rtd_theme; sphinx-automodapi; sphinx-click; sphinxcontrib-programoutput

[options.entry_points]
console_scripts =
    musered = musered.__main__:main

[tool:pytest]
addopts = --doctest-modules
minversion = 3.7.0
testpaths = tests musered
filterwarnings =
    ignore::DeprecationWarning

[isort]
multi_line_output = 3
include_trailing_comma = True
known_third_party=numpy,scipy,astropy,mpdaf,sqlalchemy,joblib,matplotlib,dataset,yaml,cpl,tqdm,click

[flake8]
max-line-length = 88
